--- a/ticTactoe-style.css
+++ b/ticTactoe-style.css
@@ -25,5 +25,9 @@ body {
     font-size: 50px;
     margin: 5px;
     cursor: pointer;
-    color: rgba(0,0,0,0);
+    color: rgba(255,255,255,0);
+}
+
+footer {
+    margin: 10px 100px;
 }
